# PHARE

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  combinations.md  init_spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
doc/source/theory/: mhd.md
docs/superpowers/plans/: 2026-07-05-derived-quantities.md  2026-07-06-divb-move-e-j-diagnostics.md  2026-07-06-generalize-inflow-bc.md  2026-07-06-inner-boundary-extraction.md  2026-07-22-mhd-blast-low-beta.md
docs/superpowers/specs/: 2026-07-05-derived-quantities-design.md  2026-07-06-divb-move-e-j-diagnostics-design.md  2026-07-06-generalize-inflow-bc-design.md  2026-07-06-inner-boundary-extraction-design.md  2026-07-22-mhd-blast-low-beta-design.md
pyphare/pyphare/core/: box.py  gridlayout.py  phare_utilities.py
pyphare/pyphare/cpp/: __init__.py
pyphare/pyphare/pharein/: boundary.py  diagnostics.py  maxwellian_fluid_model.py  mhd_model.py  restarts.py  simulation.py  tagging.py  timestepper.py
pyphare/pyphare/physics/: non_dimensionalizer.py
pyphare/pyphare/simulator/: simulator.py
pyphare/pyphare_tests/pharein/: CMakeLists.txt  boundary_test.py  restarts_test.py  simulation_test.py
res/cmake/: def.cmake  options.cmake  test.cmake
res/sim/: all.txt
src/: phare_simulator_options.hpp  phare_solver.hpp
src/amr/: CMakeLists.txt  multiphysics_integrator.hpp
src/amr/level_initializer/: hybrid_level_initializer.hpp  mhd_level_initializer.hpp
src/amr/messengers/: hybrid_hybrid_messenger_strategy.hpp  messenger_factory.hpp  mhd_messenger.hpp  mhd_messenger_info.hpp
src/amr/physical_models/: hybrid_model.hpp  mhd_model.hpp  physical_model.hpp
src/amr/resources_manager/: ghost_elem_resource.hpp  particle_resource.hpp  resources_manager.hpp  resources_manager_utilities.hpp
src/amr/solvers/: mhd_inactive_cell_reset.hpp  reflux_geometry.hpp  solver.hpp  solver_mhd.hpp  solver_mhd_field_evolvers.hpp  solver_mhd_model_view.hpp  solver_ppc.hpp
src/amr/tagging/: concrete_tagger.hpp  default_tagger_strategy.hpp  tagging_criteria.hpp
src/amr/wrappers/: hierarchy.hpp  integrator.hpp
src/core/: CMakeLists.txt  logger.hpp
src/core/boundary/: boundary.hpp  boundary_defs.hpp  boundary_factory.hpp  boundary_inflow_compose.hpp  boundary_manager.hpp
src/core/data/: patch_field_accessor.hpp
src/core/hybrid/: hybrid_quantities.hpp
src/core/inner_boundary/: field_adaptive_dirichlet_or_neumann_inner_boundary_condition.hpp  field_antisymmetric_inner_boundary_condition.hpp  field_dirichlet_inner_boundary_condition.hpp  field_inner_boundary_condition.hpp  field_ionospheric_convection_momentum_inner_boundary_condition.hpp  field_neumann_inner_boundary_condition.hpp  field_none_inner_boundary_condition.hpp  field_symmetric_inner_boundary_condition.hpp  field_total_energy_from_pressure_inner_boundary_condition.hpp  ghost_elem_pack.hpp  inner_bc_context.hpp  inner_boundary_condition.hpp  inner_boundary_condition_factory.hpp  inner_boundary_defs.hpp  inner_boundary_factory.hpp  inner_boundary_geometry.hpp  inner_boundary_manager.hpp  inner_boundary_mesh_classifier.hpp  inner_boundary_mesh_data.hpp  plane_inner_boundary.hpp  sphere_inner_boundary.hpp
src/diagnostic/: diagnostic_manager.hpp  diagnostic_model_view.hpp  diagnostic_props.hpp  diagnostics.hpp
src/initializer/: data_provider.hpp  dictator.cpp  python_data_provider.hpp
src/phare/: phare.cpp
src/python3/: CMakeLists.txt  cpp_etc.cpp  cpp_simulator.hpp  mhd_resolver.hpp  patch_data.hpp
src/restarts/: restarts.hpp  restarts_manager.hpp  restarts_props.hpp
src/simulator/: simulator.hpp
tests/core/data/derived_quantity/: CMakeLists.txt  test_centering.cpp  test_derived_quantity.cpp  test_derived_scratch.cpp  test_mhd_derived_quantities.cpp
tests/core/numerics/boundary_condition/: CMakeLists.txt  hybrid_bc_test_fixtures.hpp  mhd_bc_test_fixtures.hpp  test_field_boundary_conditions.cpp  test_field_boundary_conditions_adaptive_outflow.cpp  test_field_boundary_conditions_antisymmetric.cpp  test_field_boundary_conditions_b1_from_btot.cpp  test_field_boundary_conditions_boundary_factory.cpp  test_field_boundary_conditions_dirichlet.cpp  test_field_boundary_conditions_dirichlet_b_energy_subbc.cpp  test_field_boundary_conditions_div_free_transverse_dirichlet.cpp  test_field_boundary_conditions_div_free_transverse_neumann.cpp  test_field_boundary_conditions_inflow_compose.cpp  test_field_boundary_conditions_neumann.cpp  test_field_boundary_conditions_none.cpp  test_field_boundary_conditions_symmetric.cpp  test_field_boundary_conditions_total_energy_from_pressure.cpp
tests/core/utilities/inner_boundary/: CMakeLists.txt  test_field_adaptive_dirichlet_or_neumann_inner_boundary_condition.cpp  test_field_antisymmetric_inner_boundary_condition.cpp  test_field_dirichlet_inner_boundary_condition.cpp  test_field_ionospheric_convection_momentum_inner_boundary_condition.cpp  test_field_neumann_inner_boundary_condition.cpp  test_field_symmetric_inner_boundary_condition.cpp  test_field_total_energy_from_pressure_inner_boundary_condition.cpp  test_inner_boundary_manager.cpp  test_inner_boundary_mesh_classifier.cpp
tests/core/utilities/timestamps/: CMakeLists.txt  test_timestamps.cpp
tests/diagnostic/: test_diagnostics.hpp
tests/initializer/: test_initializer.cpp
tests/simulator/: CMakeLists.txt  per_test.hpp  test_adaptive_cadence.py  test_advance.py  test_diagnostic_timestamps.py  test_diagnostics.py  test_dump_cadence_validation.py  test_hybrid_current_density_diagnostic.py  test_initialization.py  test_mhd_derived_diagnostics.py  test_time_step.py  test_vtk_diagnostics.py  test_vtk_diagnostics_mhd.py
tools/: spacetime_plot.py  well_balanced_b0_fix.md
(+227 files in other folders)
